--- a/src/Components/Menubar/Menubar.css
+++ b/src/Components/Menubar/Menubar.css
@@ -1,16 +1,27 @@
 .MesssengerFullLogoStyle {
     color: rgb(21, 117, 234);
     margin-top: '-4px';
+    margin-right: '5px';
     position: relative;
 }
 .MessengerFloatingMessege {
     color: white;
     background-color: red;
-    width: 20px;
+    width: 17px;
     height: 20px;
+    margin-left: -17px;
     border-radius: 50%;
     position: relative;
     text-align: center;
-    top: -14px;
-    right: 14px;
+    top: -7px;
+    right: -2px;
+}
+.navlink {
+    margin: 14px 10px;
+}
+
+@media (max-width: 991px) {
+    .navlink {
+        margin: 10px 0px;
+    }
 }
